MatchNow 重构