@@ -1,14 +1,11 @@
 package com.now.nowbot.service.MessageServiceImpl;
 
-import com.now.nowbot.model.multiplayer.Match;
-import com.now.nowbot.model.multiplayer.MatchCal;
-import com.now.nowbot.model.multiplayer.MatchRound;
-import com.now.nowbot.model.multiplayer.MatchScore;
+import com.now.nowbot.model.multiplayer.*;
 import com.now.nowbot.qq.event.MessageEvent;
 import com.now.nowbot.service.ImageService;
 import com.now.nowbot.service.MessageService;
 import com.now.nowbot.service.OsuApiService.OsuMatchApiService;
-import com.now.nowbot.throwable.ServiceException.MonitorNowException;
+import com.now.nowbot.throwable.ServiceException.MatchNowException;
 import com.now.nowbot.util.Instructions;
 import com.now.nowbot.util.QQMsgUtil;
 import jakarta.annotation.Resource;
@@ -19,9 +16,9 @@ import org.springframework.stereotype.Service;
 import java.util.Comparator;
 import java.util.regex.Matcher;
 
-@Service("MONITORNOW")
-public class MonitorNowService implements MessageService<Matcher> {
-    private static final Logger log = LoggerFactory.getLogger(MonitorNowService.class);
+@Service("MATCHNOW")
+public class MatchNowService implements MessageService<Matcher> {
+    private static final Logger log = LoggerFactory.getLogger(MatchNowService.class);
     @Resource
     OsuMatchApiService osuMatchApiService;
     @Resource
@@ -29,7 +26,7 @@ public class MonitorNowService implements MessageService<Matcher> {
 
     @Override
     public boolean isHandle(MessageEvent event, DataValue<Matcher> data) {
-        var m = Instructions.MONITORNOW.matcher(event.getRawMessage().trim());
+        var m = Instructions.MATCHNOW.matcher(event.getRawMessage().trim());
         if (m.find()) {
             data.setValue(m);
             return true;
@@ -48,50 +45,58 @@ public class MonitorNowService implements MessageService<Matcher> {
         try {
             matchID = Integer.parseInt(matcher.group("matchid"));
         } catch (NullPointerException e) {
-            throw new MonitorNowException(MonitorNowException.Type.MN_MatchId_Error);
+            throw new MatchNowException(MatchNowException.Type.MN_MatchId_Error);
         }
 
         var from = event.getSubject();
 
-        var f = getImage(matchID, skip, skipEnd, failed, rematch);
+        var data = parseData(matchID, skip, skipEnd, failed, rematch);
+
+        byte[] img;
+        try {
+            img = imageService.getPanelF(data);
+        } catch (Exception e) {
+            throw new MatchNowException(MatchNowException.Type.MN_Render_Error);
+        }
 
         try {
-            QQMsgUtil.sendImage(from, f);
+            QQMsgUtil.sendImage(from, img);
         } catch (Exception e) {
-            log.error("MonitorNow:", e);
-            throw new MonitorNowException(MonitorNowException.Type.MN_Send_Error);
+            log.error("MN:", e);
+            throw new MatchNowException(MatchNowException.Type.MN_Send_Error);
         }
     }
 
-    public byte[] getImage(int matchID, int skip, int skipEnd, boolean failed, boolean rematch) throws MonitorNowException {
+    public MatchData parseData(int matchID, int skip, int skipEnd, boolean failed, boolean rematch) throws MatchNowException {
         Match match;
         try {
             match = osuMatchApiService.getMatchInfo(matchID, 10);
         } catch (Exception e) {
-            throw new MonitorNowException(MonitorNowException.Type.MN_Match_NotFound);
+            throw new MatchNowException(MatchNowException.Type.MN_Match_NotFound);
         }
 
-        while (!match.getFirstEventId().equals(match.getEvents().get(0).getId())) {
+        while (!match.getFirstEventId().equals(match.getEvents().getFirst().getId())) {
             var events = osuMatchApiService.getMatchInfo(matchID, 10).getEvents();
-            if (events.isEmpty()) throw new MonitorNowException(MonitorNowException.Type.MN_Match_Empty);
+            if (events.isEmpty()) throw new MatchNowException(MatchNowException.Type.MN_Match_Empty);
             match.getEvents().addAll(0, events);
         }
 
         if (match.getEvents().size() - skipEnd - skip <= 0) {
-            throw new MonitorNowException(MonitorNowException.Type.MN_Match_OutOfBoundsError);
+            throw new MatchNowException(MatchNowException.Type.MN_Match_OutOfBoundsError);
         }
 
-        MatchCal cal;
+        MatchData matchData;
         try {
-            cal = new MatchCal(match, skip, skipEnd, failed, rematch);
-            cal.addMicroUser4MatchScore();
-            cal.addRanking4MatchScore();
+            matchData = new MatchData(match, skip, skipEnd, failed, rematch);
+            matchData.calculate();
 
-            for (MatchRound r : cal.getRoundList()) {
+            //如果只有一两个人，则不排序（slot 从小到大）
+            boolean isSize2p = !matchData.getRoundList().stream().filter(s -> s.getScoreInfoList().size() > 2).toList().isEmpty();
+
+            for (MatchRound r : matchData.getRoundList()) {
                 var scoreList = r.getScoreInfoList();
 
-                //如果只有一两个人，则不排序（slot 从小到大）
-                if (scoreList.size() > 2) {
+                if (isSize2p) {
                     r.setScoreInfoList(scoreList.stream().sorted(
                                     Comparator.comparingInt(MatchScore::getScore).reversed()).toList());
                 } else {
@@ -102,16 +107,8 @@ public class MonitorNowService implements MessageService<Matcher> {
 
         } catch (Exception e) {
             log.error("MN Parse:", e);
-            throw new MonitorNowException(MonitorNowException.Type.MN_Match_ParseError);
+            throw new MatchNowException(MatchNowException.Type.MN_Match_ParseError);
         }
-
-        byte[] img;
-        try {
-            img = imageService.getPanelF(match.getMatchStat(), cal.getRoundList());
-        } catch (Exception e) {
-            throw new MonitorNowException(MonitorNowException.Type.MN_Render_Error);
-        }
-
-        return img;
+        return matchData;
     }
 }
